fixed overflow issue

--- a/css/resume.css
+++ b/css/resume.css
@@ -6,7 +6,7 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    overflow:hidden;
+      overflow-x: hidden;
 }
 
 body {
@@ -16,7 +16,7 @@ body {
     background-size: cover;
     /* background-position: top center; */
     background-repeat: no-repeat;
-    overflow:hidden;
+      overflow-x: hidden;
 }
 
 section{
@@ -30,6 +30,7 @@ section{
 section h3{
     width: 100%;
     padding: 40px 0px;
+    /* overflow:hidden; */
 }
 
 .dark-line {
